fix blue image bug

--- a/client/src/components/Slider/slider.scss
+++ b/client/src/components/Slider/slider.scss
@@ -14,6 +14,9 @@
             width: 100vw;
             height: 100%;
             object-fit: cover;
+            user-select: none;
+            -moz-user-select: none;
+            -webkit-user-select: none;
         }
     }
     .icons{
