--- a/client/src/components/Card/card.scss
+++ b/client/src/components/Card/card.scss
@@ -13,6 +13,7 @@
     img{
         width: 100%;
         height: 100%;
+        border-radius: 10px;
         object-fit: cover;
         position: absolute;
     }
