--- a/client/src/pages/Product/product.scss
+++ b/client/src/pages/Product/product.scss
@@ -16,6 +16,7 @@
           object-fit: cover;
           cursor: pointer;
           margin-bottom: 10px;
+          border-radius: 10px;
         }
       }
       .mainImg {
@@ -25,6 +26,7 @@
           width: 100%;
           max-height: 800px;
           object-fit: cover;
+          border-radius: 10px;
         }
       }
     }
