--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -1,8 +1,10 @@
 html{
     overflow-x: hidden;
+    font-family: 'Space Grotesk', sans-serif;
 }
 
 .app{
+    
     .link{
         color: inherit;
         text-decoration: none;
