--- a/client/src/components/Categories/categories.scss
+++ b/client/src/components/Categories/categories.scss
@@ -3,16 +3,19 @@
     height: 80vh;
     gap: 10px;
     margin:  10px;
+    
 
     .col{
         flex: 1;
         display: flex;
         flex-direction: column;
         gap: 10px;
+      
     }
 
     .col-l{
-        flex: 2;
+        flex: 1;
+        
     }
 
     .row{
@@ -21,30 +24,18 @@
         gap: 10px;
         position: relative;
         overflow: hidden;
+        border-radius: 10px;
+        box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
     
-        button{
-          position: absolute;
-          min-width: 100px;
-          width: fit-content;
-          height: 50px;
-          padding: 10px;
-          top: 0;
-          bottom: 0;
-          left: 0;
-          right: 0;
-          margin: auto;
-          cursor: pointer;
-          border: none;
-          background-color: white;
-          text-transform: uppercase;
-          font-weight: 500;
-        }
     
         img{
           width: 100%;
           height: 100%;
           object-fit: cover;
           border-radius: 10px;
+          cursor: pointer;
+          
         }
       }
 }
+
