--- a/client/src/components/Slider/slider.scss
+++ b/client/src/components/Slider/slider.scss
@@ -26,13 +26,16 @@
         left: 0;
         right: 0;
         margin: auto;
-        gap: 10px;
-        bottom: 100px;
+        gap: 100px;
+        bottom: 50px;
+        
 
         .icon{
+            border-radius: 50%;
             width: 50px;
             height: 50px;
-            border: 1px solid #999;
+            background: #2525253d;
+         
             display: flex;
             align-items: center;
             justify-content: center;
