--- a/client/src/components/Card/card.scss
+++ b/client/src/components/Card/card.scss
@@ -3,28 +3,43 @@
  display: flex;
  flex-direction: column;
  gap:10px;
+ background-color: #f8f5ff;
+ border-radius: 15px;
+
+
 
  .image{
     width:100%;
     height: 400px;
     overflow: hidden;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 
     img{
-        width: 100%;
-        height: 100%;
+        width: 85%;
+        height: 90%;
         border-radius: 10px;
         object-fit: cover;
-        position: absolute;
+        position: absolute; 
+        display: flex;
+        
     }
  }
  h2{
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 700;
+    display: flex;
+    margin-left: 8%;
  }
  .prices{
     display: flex;
     gap: 20px;
+    margin-left: 8%;
+    padding-bottom: 10px;
+    
 
     h3{
         font-size: 18px;
