--- a/client/src/components/Cart/cart.scss
+++ b/client/src/components/Cart/cart.scss
@@ -3,15 +3,22 @@
     right: 20px;
     top: 80px;
     z-index: 999;
-    background-color: white;
+    background-color: #f6f3fc;
     padding: 20px;
     -webkit-box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
     box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+ width: auto;
+ min-height: 150px;
+ max-height: 300px;
+ min-width: 300px;
+ max-width: 350px;
+    overflow-y: scroll;
   
     h1 {
       margin-bottom: 30px;
-      color: gray;
-      font-weight: 400;
+      color: rgb(0, 0, 0);
+      font-weight: 700;
       font-size: 24px;
     }
   
@@ -20,10 +27,12 @@
       align-items: center;
       gap: 20px;
       margin-bottom: 30px;
+      position: relative;
       img {
         width: 80px;
         height: 100px;
         object-fit: cover;
+        border-radius: 7px;
       }
   
       .details {
@@ -39,13 +48,16 @@
         }
   
         .price {
-          color: #2879fe;
+          color: #808081;
         }
       }
   
       .delete {
-        color: red;
-        font-size: 30px;
+        position: absolute;
+        padding-left: 255px;
+        padding-top: 50px;
+        color: rgb(0, 0, 0);
+        font-size: 25px;
         cursor: pointer;
       }
     }
@@ -53,24 +65,27 @@
     .total {
       display: flex;
       justify-content: space-between;
-      font-weight: 500;
+      font-weight: 700;
       font-size: 18px;
       margin-bottom: 20px;
     }
   
     button {
-      width: 250px;
+      font-family: 'Space Grotesk', sans-serif;
+      width: 100%;
       padding: 10px;
       display: flex;
       align-items: center;
       justify-content: center;
+      font-size: medium;
       gap: 20px;
       cursor: pointer;
       border: none;
-      background-color: #2879fe;
+      background-color: #2e2e2e;
       color: white;
-      font-weight: 500;
+      font-weight: 400;
       margin-bottom: 20px;
+      border-radius: 10px;
     }
   
     .reset{
