--- a/client/src/components/FeaturedProducts/featuredProducts.scss
+++ b/client/src/components/FeaturedProducts/featuredProducts.scss
@@ -18,10 +18,16 @@
         }
     }
 
-    .bottom{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 50px;
-    }
+    
+}
+.bottom{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 50px;
+    margin: 0px;
+    margin-bottom: 100px;
+    flex-wrap: wrap;
+
+
 }
