--- a/client/src/components/Footer/footer.scss
+++ b/client/src/components/Footer/footer.scss
@@ -1,5 +1,7 @@
 .footer{
-    margin: 100px 200px 20px 200px;
+    padding: 50px;
+
+    background-color: #f6f2ff;
 
     .top{
         display: flex;
@@ -25,30 +27,23 @@
     }
     .bottom{
         display: flex;
-        align-items: center;
+        flex-direction: column;
         justify-content: space-between;
-        margin-top: 50px;
+        margin-bottom: 0px;
 
-        .left{
-            display: flex;
-            align-items: center;
+        
 
             .logo{
                 font-weight: bold;
-                font-size: 24px;
+                font-size: 27px;
 
             }
             .copyright{
-                margin-left: 20px;
+               
                 font-size: 12px;
                 color: gray;
             }
-        }
-        .right{
-
-            img{
-                height: 100px;
-            }
-        }
+        
+        
     }
 }
