--- a/client/src/pages/Products/products.scss
+++ b/client/src/pages/Products/products.scss
@@ -7,12 +7,12 @@
       position: sticky;
       height: 100%;
       top: 50px;
+      
   
-      .filterItem{
-        margin-bottom: 30px;
+    
   
         h2{
-          font-weight: 400;
+          font-weight: 700;
           margin-bottom: 20px;
         }
   
@@ -23,7 +23,7 @@
             margin-left: 10px;
           }
         }
-      }
+      
     }
     
     .right {
@@ -34,6 +34,7 @@
         height: 300px;
         object-fit: cover;
         margin-bottom: 50px;
+        border-radius: 10px;
       }
     }
   }
