--- a/client/src/components/Card/card.scss
+++ b/client/src/components/Card/card.scss
@@ -3,14 +3,14 @@
  display: flex;
  flex-direction: column;
  gap:10px;
- background-color: #f8f5ff;
+ background-color: #f8f8f8;
  border-radius: 15px;
 
 
 
  .image{
     width:100%;
-    height: 400px;
+    height: 350px;
     overflow: hidden;
     position: relative;
     display: flex;
