--- a/client/src/components/Cart/cart.scss
+++ b/client/src/components/Cart/cart.scss
@@ -3,7 +3,7 @@
     right: 20px;
     top: 80px;
     z-index: 999;
-    background-color: #f6f3fc;
+    background-color: #f8f8f8;;
     padding: 20px;
     -webkit-box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
     box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
@@ -89,6 +89,7 @@
     }
   
     .reset{
+
       color:red;
       font-size: 12px;
       cursor: pointer;
