--- a/client/src/components/Cart/cart.scss
+++ b/client/src/components/Cart/cart.scss
@@ -6,14 +6,15 @@
     background-color: #f8f8f8;;
     padding: 20px;
     -webkit-box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
-    box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     border-radius: 10px;
  width: auto;
  min-height: 150px;
- max-height: 300px;
+ max-height: 350px;
  min-width: 300px;
  max-width: 350px;
     overflow-y: scroll;
+
   
     h1 {
       margin-bottom: 30px;
@@ -54,8 +55,8 @@
   
       .delete {
         position: absolute;
-        padding-left: 255px;
-        padding-top: 50px;
+        padding-left: 67px;
+        padding-bottom: 97px;
         color: rgb(0, 0, 0);
         font-size: 25px;
         cursor: pointer;
@@ -90,8 +91,22 @@
   
     .reset{
 
-      color:red;
+      color:rgb(32, 31, 31);
+    border: solid;
+    border-width: 2px;
+      padding-top: 2px;
+      padding-bottom: 2px;
+      padding-left: 5px;
+      padding-right: 5px;
       font-size: 12px;
       cursor: pointer;
+      font-weight: 700;
+      border-radius: 5px;
     }
   }
+
+
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
