typo and ui fixes

--- a/client/src/pages/Product/product.scss
+++ b/client/src/pages/Product/product.scss
@@ -38,9 +38,10 @@
   
       .price{
         font-size: 30px;
-        color: #2879fe;
-        font-weight: 500;
+        color: #000000;
+        font-weight: 700;
       }
+      
   
       p{
         font-size: 15px;
